--- a/clinical-vis.html
+++ b/clinical-vis.html
@@ -315,6 +315,35 @@ $.getJSON('http://lore-api.sickkids.ca/api/data?measure=157&patient=2673678&star
         font-weight: 400;
       }
     </style>
+    <div class="basic-data">
+      <div class="basic-data-heading">Patient Information</div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">Name</div>
+        <div class="basic-data-value">Tom Smith</div>
+      </div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">Age</div>
+        <div class="basic-data-value">65</div>
+      </div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">Gender</div>
+        <div class="basic-data-value">Male</div>
+      </div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">Ethnicity</div>
+        <div class="basic-data-value">White</div>
+      </div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">Admitting Diagnosis</div>
+        <div class="basic-data-value">N/A</div>
+      </div>
+      <div class="basic-data-pair">
+        <div class="basic-data-key">ICU type</div>
+        <div class="basic-data-value">N/A</div>
+      </div>
+    </div>
+
+
       <div class="chart-card">
         <div class="chart-card-heading">Waveform Visualization & Labelling</div>
         <div id="chartstop"></div>
