--- a/clinical-vis.html
+++ b/clinical-vis.html
@@ -395,7 +395,22 @@ $.getJSON('http://lore-api.sickkids.ca/api/data?measure=157&patient=2673678&star
     <div id="notes-holder-out">
       <div class="table-holder-out-heading">Notes</div>
       <div id="notesholder">
-        <div class="note-text">Test Note 1</div>
+        <div class="note-text">The patient is an 8 month old female with Trisomy 21 who was admitted 3 weeks ago with 
+respiratory failure with low oxygen levels. Despite initial attempts at managing her respiratory failure with 
+conventional breathing machine strategies, she continued to struggle and so ultimately required cannulation to 
+ECMO in order to facilitate gas exhange. She was found to have an underlying virus along with a superimposed 
+bacterial pneumonia. During the first two weeks of her hospitalization her blood pressure was occasionally low 
+and she required additional medications and fluids. 
+
+Since that time, she has slowly improved from a respiratory standpoint but still requires ECMO. She is fluid 
+overloaded with acute kidney injury and has been on a diuretic infusion. She requires frequent electrolyte 
+replacements. She was well-nourished prior to her illness but has not consistently been meeting her caloric and 
+protein goals for a variety of reasons. She has had feeding intolerance and she has only inconsistently 
+tolerated feeds in her intestines through the feeding tube, with the bulk of her nutrition coming from TPN. 
+          
+Using the current EPIC workflow on daily rounds, the following steps were required to ascertain her current fluid and 
+nutrition status in order to inform the daily plan for her fluid goal and how to best achieve that goal while optimizing 
+nutrition given current options and limitations. </div>
       </div>
     </div>
 
